--- a/configs/config.toml
+++ b/configs/config.toml
@@ -61,6 +61,10 @@ AllowCredentials = true
 # 可以缓存预检请求结果的时间（以秒为单位）
 MaxAge = 7200
 
+[SESSION]
+Enable = false
+Secret = "3K"
+
 [GZIP]
 # 是否启用
 Enable = false
