--- a/configs/config.toml
+++ b/configs/config.toml
@@ -35,9 +35,9 @@ Level = 5
 # 日志格式（支持输出格式：text/json）
 Format = "text"
 # 日志输出(支持：stdout/stderr/file)
-Output = "stdout"
+Output = "file"
 # 指定日志输出的文件路径
-OutputFile = "data/gin-admin.log"
+OutputFile = "data/k3gin.log"
 # 日志轮询数量
 RotationCount = 20
 # 日志轮询时间周期
