--- a/configs/config.toml
+++ b/configs/config.toml
@@ -35,7 +35,7 @@ Level = 5
 # 日志格式（支持输出格式：text/json）
 Format = "text"
 # 日志输出(支持：stdout/stderr/file)
-Output = "file"
+Output = "stdout"
 # 指定日志输出的文件路径
 OutputFile = "data/k3gin.log"
 # 日志轮询数量
