--- a/configs/config.toml
+++ b/configs/config.toml
@@ -68,6 +68,11 @@ AllowCredentials = true
 # 可以缓存预检请求结果的时间（以秒为单位）
 MaxAge = 7200
 
+
+[Cron]
+# CRON 退出 最多等待的时间
+WaitGraceExit = 5000
+
 [SESSION]
 Enable = false
 Secret = "3K"
