--- a/configs/config.toml
+++ b/configs/config.toml
@@ -75,6 +75,14 @@ Secret = "3K"
 [Cron]
 # CRON 退出 最多等待的时间
 WaitGraceExit = 5000
+# 日志输出(支持：stdout/stderr/file)
+Output = "stdout"
+# 指定日志输出的文件路径
+OutputFile = "data/cron.log"
+# 日志轮询数量
+RotationCount = 20
+# 日志轮询时间周期
+RotationTime = 24
 
 [GZIP]
 # 是否启用
