--- a/configs/config.toml
+++ b/configs/config.toml
@@ -28,6 +28,20 @@ ShutdownTimeout = 30
 # 允许的最大内容长度(64M)
 MaxContentLength = 67108864
 
+[grpc]
+# rpc监听的地址
+Host = "0.0.0.0"
+# rpc监听端口
+Port = 50051
+# 证书路径a
+CerFile = ""
+# 证书密钥地址
+KeyFile = ""
+# 客户端证书地址
+CACert = ""
+# http优雅关闭等待超时时长(单位秒)
+ShutdownTimeout = 30
+
 
 [Log]
 # 日志级别(1:fatal 2:error,3:warn,4:info,5:debug,6:trace)
