--- a/configs/config.toml
+++ b/configs/config.toml
@@ -14,6 +14,21 @@ PrintConfig = true
 # 是否启用pprof
 Pprof = false
 
+[WebSocket]
+# http监听地址
+Host = "0.0.0.0"
+# http监听端口
+Port = 50052
+# 证书路径
+CertFile = ""
+# 证书密钥
+KeyFile = ""
+# http优雅关闭等待超时时长(单位秒)
+ShutdownTimeout = 30
+# 允许的最大内容长度(64M)
+MaxContentLength = 67108864
+
+
 [HTTP]
 # http监听地址
 Host = "0.0.0.0"
